--- a/Fable/Views/Absences/Details.cshtml
+++ b/Fable/Views/Absences/Details.cshtml
@@ -16,6 +16,14 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.State)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.State)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.School)
         </dt>
 
